Added final touches

--- a/index.html
+++ b/index.html
@@ -6,23 +6,53 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="footerBack">
-            <h2>This website is awesome</h2>
-            <p>This website</p>
-            <img>
+        <div class="footerBack flexContainer" style="justify-content: space-between;">
+            <p style="padding-left: 100px;" class="secondary"><strong>Header Logo</strong></p>
+            <p style="padding-right: 100px;" class="secondary">Header link one&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Header link two&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Header link three</p>
+        </div>
+        <div class="footerBack flexContainer padding" style="justify-content: space-between;">
+            <div>
+                <h2 class="heroText">This website is about dogs</h2>
+                <p class="secondary">Dogs are inportant to every person, so this page is about them</p>
+                <button class="buttonBackgroundColor button">Click here!</button>
+            </div>
+            <img width="200" height="200"  src ="https://images.pexels.com/photos/5482148/pexels-photo-5482148.jpeg?auto=compress&cs=tinysrgb&w=600">
         </div>
         <div>
-            <h3>Some random information</h3>
+            <h1 class="informationHeader">Here are some pictures of dogs</h1>
+            <div class="flexContainer">
+                <div>
+                    <img class="dogImage" width="200" height="200" scr="https://images.pexels.com/photos/8499870/pexels-photo-8499870.jpeg?auto=compress&cs=tinysrgb&w=600">
+                    <p>Here is some info</p>
+                </div>
+                <div>
+                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                    <p>Dog holding a leash</p>
+                </div>
+                <div>
+                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/4056529/pexels-photo-4056529.jpeg?auto=compress&cs=tinysrgb&w=600">
+                    <p>Partners doing yoga</p>
+                </div>
+                <div>
+                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/4587991/pexels-photo-4587991.jpeg?auto=compress&cs=tinysrgb&w=600">
+                    <p>A silent dog</p>
+                </div>
+            </div>
+        </div>
+        <div class="quoteBack padding">
+            <p class="quoteText">A house is not a home until it has a dog - <strong>Gerald Durrell</strong></p>
         </div>
         <div>
-            <p>Random quote</p>
+            <div class="flexContainer buttonBackgroundColor blueBox" style="justify-content: baseline;" >
+                <div>
+                    <h4 >It's time to help the world of dogs!</h4>
+                    <p>This button will send you to a dontation page</p>
+                </div>
+                <button style="margin-left: 100px;" class="buttonBackgroundColor button">Click here!</button>
+            </div>
         </div>
-        <div>
-            <h4>Press button</h4>
-            <p>This happens</p>
-        </div>
-        <div class="footerBack">
-            
+        <div class="footerBack" style="padding-top: 30px;">
+            <p class="secondary">Copyright @ The Odin Project 2021</p>
         </div>
     </body>
 </html>
