--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Landing page</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="margin: 0px;">
         <div class="footerBack flexContainer" style="justify-content: space-between;">
             <p style="padding-left: 100px;" class="secondary"><strong>Header Logo</strong></p>
             <p style="padding-right: 100px;" class="secondary">Header link one&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Header link two&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Header link three</p>
@@ -22,19 +22,19 @@
             <h1 class="informationHeader">Here are some pictures of dogs</h1>
             <div class="flexContainer">
                 <div>
-                    <img class="dogImage" width="200" height="200" scr="https://images.pexels.com/photos/8499870/pexels-photo-8499870.jpeg?auto=compress&cs=tinysrgb&w=600">
+                    <img class="dogImage" src="https://images.pexels.com/photos/8499870/pexels-photo-8499870.jpeg?auto=compress&cs=tinysrgb&w=600" alt="dog#1">
                     <p>Here is some info</p>
                 </div>
                 <div>
-                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="dog#2">
                     <p>Dog holding a leash</p>
                 </div>
                 <div>
-                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/4056529/pexels-photo-4056529.jpeg?auto=compress&cs=tinysrgb&w=600">
+                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/4056529/pexels-photo-4056529.jpeg?auto=compress&cs=tinysrgb&w=600" alt="dog#3">
                     <p>Partners doing yoga</p>
                 </div>
                 <div>
-                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/4587991/pexels-photo-4587991.jpeg?auto=compress&cs=tinysrgb&w=600">
+                    <img class="dogImage" width="200" height="200" src="https://images.pexels.com/photos/4587991/pexels-photo-4587991.jpeg?auto=compress&cs=tinysrgb&w=600" alt="dog#4">
                     <p>A silent dog</p>
                 </div>
             </div>
