fix to image size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="informationHeader">Here are some pictures of dogs</h1>
             <div class="flexContainer">
                 <div>
-                    <img class="dogImage" src="https://images.pexels.com/photos/8499870/pexels-photo-8499870.jpeg?auto=compress&cs=tinysrgb&w=600" alt="dog#1">
+                    <img class="dogImage" width="200" height="200"src="https://images.pexels.com/photos/8499870/pexels-photo-8499870.jpeg?auto=compress&cs=tinysrgb&w=600" alt="dog#1">
                     <p>Here is some info</p>
                 </div>
                 <div>
